# entertainment-source-manager

./: .coveragerc  .dockerignore  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/actions/build-publish/: action.yml
.github/actions/project-version/: action.yml
.github/workflows/: ci.yml  publish.yml
app/: cli.py  logs.py  main.py  settings.py  show.py
app/builders/: todoist.py
app/core/: common.py  non_scheduled.py  scheduled.py
app/models/: episodes.py  inputs.py  settings.py  source.py  todoist.py
app/providers/: __init__.py  inmanga.py  spyxfamily.py  thetvdb.py
app/repositories/: s3.py  telegram.py  todoist.py
app/utils/: inputs.py  misc.py
delivery/: Dockerfile  base.inc  entrypoint.sh
delivery/pipelines/: build.sh  pin-dependencies.sh  run.sh
delivery/scripts/: delete-image-dockerhub.sh  pin-dependencies.sh  test.sh
delivery/utils/: colors.inc  misc.inc
test/: conftest.py  test_cli.py  test_logs.py  test_main.py  test_settings.py  test_show.py
test/data/: sources.txt
test/data/core/: non_scheduled_episodes.json  s3_non_scheduled_episodes.json  scheduled_episodes.json  scheduled_tasks.json
test/data/inmanga/: inputs.html  results.json
test/data/main/: scheduled_episodes.json  (+1 more)
test/test_core/: test_non_scheduled.py  test_scheduled.py
test/test_models/: test_inputs.py
test/test_providers/: __init__.py  test_inmanga.py  test_providers.py  test_spyxfamily.py  test_thetvdb.py
test/test_repositories/: test_s3.py  test_telegram.py  test_todoist.py
(+13 files in other folders)
